--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="style.css" rel="stylesheet">
-    <title>TENNOLOCK</title>
+    <link rel="icon" type="image/x-icon" href="media/favicon.ico">
+    <title>TENNOLOCK®</title>
 </head>
 
 <body>
@@ -30,45 +31,54 @@
             </div>
             <!-- Traduttore -->
             <br>
-
         </header>
         <main>
             <div class="section-container">
                 <img class="divider" src="media/green-waves.svg">
                 <section class="green">
                     <div class="who-we-are">
+                        <h1>LA NOSTRA AZIENDA</h1>
+                        <p>TENNOLOCK® è una startup innovativa che offre lucchetti smart e
+                            tecnologici di alta qualità ad un prezzo molto accessibile.</p>
+                        <br><br>
+                        <h3>COS'È TENNOLOCK</h3>
                         <p>
-                        <h1>CHI SIAMO</h1>
-                        Benvenuti in TennoLock, una startup innovativa che offre lucchetti smart e
-                        tecnologici di alta qualità a un prezzo molto accessibile.
+                            TENNOLOCK® è una soluzione ideale per chi cerca un modo sicuro e conveniente per proteggere
+                            i
+                            propri
+                            oggetti di valore. I nostri lucchetti sono progettati con la più recente tecnologia di
+                            sicurezza
+                            e sono
+                            dotati di funzionalità avanzate che li rendono molto convenienti da usare.</p>
                         <br><br>
-                        TennoLock è una soluzione ideale per chi cerca un modo sicuro e conveniente per proteggere i
-                        propri
-                        oggetti di valore. I nostri lucchetti sono progettati con la più recente tecnologia di sicurezza
-                        e sono
-                        dotati di funzionalità avanzate che li rendono molto convenienti da usare.
+                        <h3>COSA OFFRIAMO</h3>
+                        <p>Il nostro prodotto offre una vasta gamma di caratteristiche innovative, tra cui l'apertura
+                            con
+                            impronta
+                            digitale e la possibilità di aprire il lucchetto tramite Bluetooth dal proprio smartphone.
+                        </p>
                         <br><br>
-                        Il nostro prodotto offre una vasta gamma di caratteristiche innovative, tra cui l'apertura con
-                        impronta
-                        digitale e la possibilità di aprire il lucchetto tramite Bluetooth dal proprio smartphone.
+                        <h3>IL COSTO</h3>
+                        <p>TENNOLOCK® è il miglior prodotto che puoi trovare sul mercato ad un costo incredibilmente
+                            basso.
+                            Siamo
+                            riusciti a mantenere il prezzo del nostro prodotto molto accessibile grazie all'utilizzo di
+                            materiali di
+                            alta qualità e alla scelta di un processo produttivo efficiente e razionale.</p>
                         <br><br>
-                        TennoLock è il miglior prodotto che puoi trovare sul mercato ad un costo incredibilmente basso.
-                        Siamo
-                        riusciti a mantenere il prezzo del nostro prodotto molto accessibile grazie all'utilizzo di
-                        materiali di
-                        alta qualità e alla scelta di un processo produttivo efficiente e razionale.
+                        <h3>LA NOSTRA MISSIONE</h3>
+                        <p>La nostra missione è quella di offrire ai nostri clienti la massima sicurezza e comfort a un
+                            prezzo accessibile.</p>
                         <br><br>
-                        La nostra missione è quella di offrire ai nostri clienti la massima sicurezza e comfort a un
-                        prezzo accessibile.
-                        <br><br>
-                        In conclusione, se stai cercando un modo sicuro e conveniente per proteggere i tuoi oggetti di
-                        valore,
-                        Tennolock è la scelta perfetta per te. <span class="slogan"> Inizia a proteggere i tuoi oggetti
-                            di valore con il nostro lucchetto smart e tecnologico di
-                            alta qualità!</span>
+                        <h3>RICAPITOLANDO</h3>
+                        <p>Se stai cercando un modo sicuro e conveniente per proteggere i tuoi oggetti di
+                            valore,
+                            TENNOLOCK® è la scelta perfetta per te. <span class="slogan"> Inizia a proteggere i tuoi
+                                oggetti
+                                di valore con il nostro lucchetto smart e tecnologico di
+                                alta qualità!</p></span>
                         </p>
                     </div>
-
                 </section>
             </div>
             <div class="section-container">
@@ -97,15 +107,21 @@
                     <h1>I PRODOTTI</h1>
                     <div class="products">
                         <div class="card">
+                            <div class="price">
+                                <p class=price-text>22 €</p>
+                            </div>
                             <img src="media/lock1.png" class="card-img-top p-5">
                             <div class="card-body">
                                 <h4>Tennoround Master</h4>
                                 <p class="card-text">Porta sempre con te il nuovo e tecnologico <strong>Tennoround
                                         Master</strong>, torna utile in qualsiasi situazione con i suoi sistemi di
-                                    difesa avanzati. <br>Questo lucchetto è di ultima generazione Tennolock.</p>
+                                    difesa avanzati. <br>Questo lucchetto è di ultima generazione TENNOLOCK®.</p>
                             </div>
                         </div>
                         <div class="card">
+                            <div class="price">
+                                <p class=price-text>35 €</p>
+                            </div>
                             <img src="media/lock2.webp" class="card-img-top p-5">
                             <div class="card-body">
                                 <h4>Tennosafe V2</h4>
@@ -115,6 +131,9 @@
                             </div>
                         </div>
                         <div class="card">
+                            <div class="price">
+                                <p class=price-text>15 €</p>
+                            </div>
                             <img src="media/lock3.webp" class="card-img-top p-5">
                             <div class="card-body">
                                 <h4>Tennobike Model 3</h4>
@@ -126,8 +145,40 @@
                 </section>
             </div>
             <div class="section-container">
+                <img class="divider" src="media/purple-waves.svg">
+                <section class="purple">
+                    <h1>I PUNTI VENDITA</h1>
+                    <div class="store-frame">
+                        <a href="https://wish.com" target="_blank"><img class="store" src="media/wishLogo.png"></a>
+                        <h3>Wish</h3>
+                    </div>
+                    <div class="store-frame">
+                        <a href="https://aliexpress.com" target="_blank"><img class="store"
+                                src="media/aliexpressLogo.png"></a>
+                        <h3>AliExpress</h3>
+                    </div>
+                    <div class="store-frame">
+                        <a href="https://ebay.com" target="_blank"><img class="store" src="media/ebayLogo.png"></a>
+                        <h3>Ebay</h3>
+                    </div>
+                    <div class="store-frame">
+                        <a href="https://amazon.it" target="_blank"><img class="store" src="media/amazonLogo.png"></a>
+                        <h3>Amazon</h3>
+                    </div>
+                </section>
+            </div>
+            <div class="section-container">
+                <img class="divider" src="media/yellow-waves.svg">
+                <section class="yellow">
+                    <h1>LO SPONSOR</h1>
+                    <h3>ITIS Antonio Meucci</h3>
+                    <a href="https://itismeucci.edu.it" target="_blank"><img class="sponsor"
+                            src="media/logo-meucci.png">
+                </section></a>
+            </div>
+            <div class="section-container">
                 <img class="divider" src="media/cyan-waves.svg">
-                <section class="cyan">
+                <section class="cyan last-section">
                     <h1>IL TEAM</h1>
                     <div class="member-frame">
                         <img class="team-member" src="media/quick.png">
@@ -151,32 +202,12 @@
                     </div>
                 </section>
             </div>
-            <div class="section-container">
-                <img class="divider" src="media/orange-waves.svg">
-                <section class="orange">
-                    <h1>I PUNTI VENDITA</h1>
-                    <div class="store-frame">
-                        <a href="https://wish.com" target="_blank"><img class="store" src="media/wishLogo.png"></a>
-                        <h3>Wish</h3>
-                    </div>
-                    <div class="store-frame">
-                        <a href="https://aliexpress.com" target="_blank"><img class="store" src="media/aliexpressLogo.png"></a>
-                        <h3>AliExpress</h3>
-                    </div>
-                    <div class="store-frame">
-                        <a href="https://ebay.com" target="_blank"><img class="store" src="media/ebayLogo.png"></a>
-                        <h3>Ebay</h3>
-                    </div>
-                    <div class="store-frame">
-                        <a href="https://amazon.it" target="_blank"><img class="store" src="media/amazonLogo.png"></a>
-                        <h3>Amazon</h3>
-                    </div>
-                </section>
-            </div>
             <div class="section-container footer">
                 <img class="divider" src="media/black-waves.svg">
                 <section class="black bg-light text-center">
                     <footer class="text-center p-3">
+                        <a href="https://goo.gl/maps/3VTCMeToFyXZWmxT8" target="_blank"> <i
+                                class="bi bi-geo-alt-fill"></i></a>
                         <a href="https://instagram.com" target="_blank"><i class="bi bi-instagram"></i></a>
                         <a href="https://facebook.com" target="_blank"><i class="bi bi-facebook"></i></a>
                         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><i
@@ -194,17 +225,16 @@
     </div>
 
     <button id="go-to-top" class="hidden">
-        <i class="bi bi-arrow-up"></i>
+        <i class="bi bi-arrow-up"></i></a>
     </button>
-
+    <script type="text/javascript"
+        src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
     <script src="scripts/slideshow.js"></script>
     <script src="scripts/go_to_top.js"></script>
     <script src="scripts/copyright.js"></script>
-    <script type="text/javascript"
-        src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script src="scripts/remove_translate.js"></script>
 </body>
 
